js/js.translator/testData/incremental/invalidation/circleExportsUpdate/lib1/f2.kt
fun f2_1() = "f2_1"

fun f2_2() = f3_2()

fun f2_3() = f3_3()
